[gd_scene load_steps=9 format=3 uid="uid://db1lqpw1tim4q"]

[ext_resource type="Script" uid="uid://cv83h2tcngfv3" path="res://ui/scripts/ui_manager.gd" id="1_hp8fa"]
[ext_resource type="Texture2D" uid="uid://cqmkcefkf8vqf" path="res://ui/textures/hit_marker.png" id="2_1u8fv"]
[ext_resource type="Script" uid="uid://ol2oio1vwx3t" path="res://ui/scripts/options_menu_manager.gd" id="4_3i8ig"]
[ext_resource type="Script" uid="uid://d2ag8w6ck2est" path="res://ui/scripts/settings_panel_manager.gd" id="5_ky4nr"]
[ext_resource type="PackedScene" uid="uid://kd4fvkpy7af2" path="res://ui/scenes/lobby_entry.tscn" id="10_yfaaw"]

[sub_resource type="Animation" id="Animation_68x3x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_4x3be"]
resource_name = "chat_fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.0333333, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g04y5"]
_data = {
&"RESET": SubResource("Animation_68x3x"),
&"chat_fade": SubResource("Animation_4x3be")
}

[node name="UI" type="Control" groups=["ui"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_hp8fa")

[node name="HUD" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="InteractText" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -275.0
offset_right = 250.0
offset_bottom = -233.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(250, 0)
theme_override_font_sizes/font_size = 30
text = "INTERACT TEXT"
horizontal_alignment = 1

[node name="ChatBox" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2179.0
offset_right = -1320.0
offset_bottom = -259.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(0, 3000)
vertical_alignment = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD/ChatBox"]
libraries = {
&"": SubResource("AnimationLibrary_g04y5")
}

[node name="HealthBar" type="ProgressBar" parent="HUD"]
modulate = Color(1, 0, 0, 1)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 39.0
offset_top = -135.0
offset_right = 439.0
offset_bottom = -85.0
grow_vertical = 0
step = 1.0
value = 100.0
show_percentage = false

[node name="StaminaBar" type="ProgressBar" parent="HUD"]
modulate = Color(1, 1, 0, 1)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 39.0
offset_top = -169.0
offset_right = 439.0
offset_bottom = -145.0
grow_vertical = 0
max_value = 1.0
value = 1.0
show_percentage = false

[node name="CrosshairHolder" type="Control" parent="HUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Crosshair" type="TextureRect" parent="HUD/CrosshairHolder"]
modulate = Color(1, 1, 1, 0.392157)
texture_filter = 1
layout_mode = 0
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(16, 16)
mouse_filter = 2

[node name="Hitmarker" type="TextureRect" parent="HUD/CrosshairHolder"]
visible = false
modulate = Color(1, 0.65, 0, 0.392157)
texture_filter = 1
layout_mode = 0
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
rotation = -0.785397
scale = Vector2(3, 3)
pivot_offset = Vector2(16, 16)
mouse_filter = 2
texture = ExtResource("2_1u8fv")

[node name="MissionPanel" type="VBoxContainer" parent="HUD"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -500.0
offset_bottom = 200.0
grow_horizontal = 0

[node name="MissionTitleLabel" type="Label" parent="HUD/MissionPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "MISSION TITLE"
horizontal_alignment = 1

[node name="MissionObjectivesLabel" type="Label" parent="HUD/MissionPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "- Objective 1
- Objective 2"
horizontal_alignment = 1

[node name="NetworkPanel" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="NetworkPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -700.0
offset_top = -400.0
offset_right = 700.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.18, 0.18, 0.18, 0.501961)

[node name="Separator" type="ColorRect" parent="NetworkPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -350.0
offset_right = 5.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.18, 0.18, 0.18, 1)

[node name="ButtonHolder" type="VBoxContainer" parent="NetworkPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -475.0
offset_top = -118.0
offset_right = -225.0
offset_bottom = 82.0
grow_horizontal = 2
grow_vertical = 2

[node name="HostSteam" type="Button" parent="NetworkPanel/ButtonHolder"]
custom_minimum_size = Vector2(0, 47.745)
layout_mode = 2
text = "HOST STEAM"

[node name="HostLocal" type="Button" parent="NetworkPanel/ButtonHolder"]
custom_minimum_size = Vector2(0, 47.745)
layout_mode = 2
text = "HOST LOCAL"

[node name="Join" type="Button" parent="NetworkPanel/ButtonHolder"]
custom_minimum_size = Vector2(0, 47.745)
layout_mode = 2
text = "JOIN
"

[node name="LobbyIDTextField" type="TextEdit" parent="NetworkPanel/ButtonHolder"]
custom_minimum_size = Vector2(0, 47.745)
layout_mode = 2
placeholder_text = "LOBBY ID"

[node name="LobbySectionLabel" type="Label" parent="NetworkPanel"]
layout_mode = 0
offset_left = 274.0
offset_top = -330.0
offset_right = 459.0
offset_bottom = -307.0
theme_type_variation = &"GraphFrameTitleLabel"
text = "Friend Lobbies"

[node name="LobbyListPanel" type="ScrollContainer" parent="NetworkPanel"]
layout_mode = 2
offset_left = 86.0
offset_top = -265.0
offset_right = 671.0
offset_bottom = 266.0

[node name="LobbyListHolder" type="VBoxContainer" parent="NetworkPanel/LobbyListPanel"]
layout_mode = 2

[node name="LobbyEntry" parent="NetworkPanel/LobbyListPanel/LobbyListHolder" instance=ExtResource("10_yfaaw")]
layout_mode = 2

[node name="LobbyEntry2" parent="NetworkPanel/LobbyListPanel/LobbyListHolder" instance=ExtResource("10_yfaaw")]
layout_mode = 2

[node name="LobbyEntry3" parent="NetworkPanel/LobbyListPanel/LobbyListHolder" instance=ExtResource("10_yfaaw")]
layout_mode = 2

[node name="LobbyEntry4" parent="NetworkPanel/LobbyListPanel/LobbyListHolder" instance=ExtResource("10_yfaaw")]
layout_mode = 2

[node name="RefreshLobbies" type="Button" parent="NetworkPanel"]
custom_minimum_size = Vector2(0, 47.745)
layout_mode = 0
offset_left = 292.0
offset_top = 316.0
offset_right = 437.0
offset_bottom = 363.745
text = "REFRESH LOBBIES"

[node name="OptionsPanel" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_3i8ig")

[node name="Background" type="ColorRect" parent="OptionsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.18, 0.18, 0.18, 0.501961)

[node name="ButtonHolder" type="VBoxContainer" parent="OptionsPanel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -100.0
offset_right = 125.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="ReturnButton" type="Button" parent="OptionsPanel/ButtonHolder"]
custom_minimum_size = Vector2(0, 47.745)
layout_mode = 2
text = "RETURN TO GAME"

[node name="LeaveButton" type="Button" parent="OptionsPanel/ButtonHolder"]
custom_minimum_size = Vector2(0, 47.745)
layout_mode = 2
text = "LEAVE GAME"

[node name="QuitButton" type="Button" parent="OptionsPanel/ButtonHolder"]
custom_minimum_size = Vector2(0, 47.745)
layout_mode = 2
text = "QUIT GAME"

[node name="SettingsButton" type="Button" parent="OptionsPanel/ButtonHolder"]
custom_minimum_size = Vector2(0, 47.745)
layout_mode = 2
text = "OPTIONS"

[node name="GameInfoLabel" type="RichTextLabel" parent="OptionsPanel"]
modulate = Color(1, 1, 1, 0.356863)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = -35.0
offset_right = 515.0
offset_bottom = -12.0
grow_vertical = 0
text = "Dungeon Crawler - vx.x.xn"
scroll_active = false

[node name="SettingsPanel" type="Control" parent="OptionsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_ky4nr")

[node name="Background" type="ColorRect" parent="OptionsPanel/SettingsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -250.0
offset_right = 350.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.18, 0.18, 0.18, 0.501961)

[node name="TitleBackground" type="ColorRect" parent="OptionsPanel/SettingsPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -97.0
offset_top = 444.0
offset_right = 97.0
offset_bottom = 497.0
grow_horizontal = 2
color = Color(0.18, 0.18, 0.18, 1)

[node name="Label" type="Label" parent="OptionsPanel/SettingsPanel/TitleBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -69.0
offset_top = -21.0
offset_right = 69.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "SETTINGS"

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsPanel/SettingsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -8.0
offset_right = 250.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sensetivity" type="Control" parent="OptionsPanel/SettingsPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="SensetivityLabel" type="Label" parent="OptionsPanel/SettingsPanel/VBoxContainer/Sensetivity"]
layout_mode = 2
offset_right = 500.0
offset_bottom = 25.0
text = "Sensetivity"

[node name="SensetivityValueLabel" type="Label" parent="OptionsPanel/SettingsPanel/VBoxContainer/Sensetivity"]
layout_mode = 2
offset_left = 150.0
offset_right = 650.0
offset_bottom = 25.0
text = "1.0"

[node name="SensetivitySlider" type="HSlider" parent="OptionsPanel/SettingsPanel/VBoxContainer/Sensetivity"]
layout_mode = 2
offset_left = 225.0
offset_right = 558.0
offset_bottom = 22.0
max_value = 2.0
step = 0.05
value = 1.0

[node name="Volume" type="Control" parent="OptionsPanel/SettingsPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="VolumeLabel" type="Label" parent="OptionsPanel/SettingsPanel/VBoxContainer/Volume"]
layout_mode = 2
offset_right = 500.0
offset_bottom = 25.0
text = "Volume"

[node name="VolumeValueLabel" type="Label" parent="OptionsPanel/SettingsPanel/VBoxContainer/Volume"]
layout_mode = 2
offset_left = 150.0
offset_right = 650.0
offset_bottom = 25.0
text = "1.0"

[node name="VolumeSlider" type="HSlider" parent="OptionsPanel/SettingsPanel/VBoxContainer/Volume"]
layout_mode = 2
offset_left = 225.0
offset_right = 558.0
offset_bottom = 22.0
max_value = 2.0
step = 0.05
value = 1.0

[node name="SaveButton" type="Button" parent="OptionsPanel/SettingsPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -320.0
offset_top = -516.0
offset_right = -273.0
offset_bottom = -485.0
grow_horizontal = 2
grow_vertical = 0
text = "SAVE"

[node name="ResetButton" type="Button" parent="OptionsPanel/SettingsPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -84.0
offset_top = -516.0
offset_right = 79.0
offset_bottom = -485.0
grow_horizontal = 2
grow_vertical = 0
text = "RESET TO DEFUALTS"

[node name="CancelButton" type="Button" parent="OptionsPanel/SettingsPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 253.0
offset_top = -516.0
offset_right = 322.0
offset_bottom = -485.0
grow_horizontal = 2
grow_vertical = 0
text = "CANCEL"
